# version-detecting-mb

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg
src/: base.py  get_build_timestamp.py  isoft_bet.py  main.py  make_hash.py
src/run_server/: bundle_server.py  server.js
