[tool.poetry]
name = "version-detecting-mb"
version = "0.1.0"
description = ""
authors = ["Roman Hnatenko <hnatenkoroman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
webdriver-manager = "^3.8.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
